Change spans to always be inline

--- a/projects/purity.html
+++ b/projects/purity.html
@@ -123,7 +123,7 @@
 				<div class="stage finish" id="finish" onsubmit="init()">
 					<h3 class="neat">epic win</h3>
 					<pre class="log smalltext"></pre>
-					<p>A total of <span class="inline" id="studios-removed-count">0</span> studios were removed from <span class="inline" id="projects-cleansed-count">0</span> projects!
+					<p>A total of <span id="studios-removed-count">0</span> studios were removed from <span id="projects-cleansed-count">0</span> projects!
 					</p>
 					<button onclick="init()">Redo</button>
 				</div>
