--- a/projects/census.html
+++ b/projects/census.html
@@ -402,7 +402,7 @@ function update() {
 	users = list_nonsupporters.children;
 	for (u in users) census.nonsupporters.push(users[u].id);
 	users = list_others.children;
-	for (u in users) census.otehrs.push(users[u].id);
+	for (u in users) census.others.push(users[u].id);
 	finish();
 }
 
