--- a/projects/index.html
+++ b/projects/index.html
@@ -6,6 +6,22 @@
     <title>#nolife- Zro617's Website</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link rel="stylesheet" href="/src/css/zro.css"></link>
+    <style>
+      li.project {
+        display: inline-block;
+        vertical-align: top;
+        margin-right: 33px;
+        padding: 5px 12px;
+        background-color: #eee;
+      }
+      li a img {
+        width: 100%;
+        height: 100%;
+      }
+      span.title {
+       display: block;
+      }
+    </style>
   </head>
 
   <body>
