--- a/projects/census.html
+++ b/projects/census.html
@@ -119,7 +119,7 @@ textarea {
 	<div class="title">
 		<h1>census</h1>
 		<h2>find your supporters and opponents</h2>
-		<span class="commit">v2.0.2 | Updated June 21, 2016</span>
+		<span class="commit">v2.0.3 | Updated June 21, 2016</span>
 	</div>
 	<div class="pagewrapper">
 		<div class="stage sb events" id="init">
@@ -274,12 +274,16 @@ function start() {
 		
 		function classify(text) {
 			if (regex.nosupport.test(text)) {
+				console.log(text,"->","no support");
 				return 1;
 			} else if (regex.support.test(text)) {
+				console.log(text,"->","support");
 				return 2;
 			} else if (regex.agree.test(text)) {
+				console.log(text,"->","agree");
 				return -1;
 			} else {
+				console.log(text,"->","???");
 				return 0;
 			}
 		}
@@ -288,17 +292,17 @@ function start() {
 			if (typeof post === "undefined") return 0;
 			var parts = post.childNodes,
 				p = parts.length-1,
-				postclass = 0,
-				partclass = 0;
-			while (p >= 0) {
+				postclass = 0;
+			while (p >= 0 && postclass === 0) {
 				if (parts[p].nodeName === "blockquote") {
-					partclass = -1;
+					postclass = -1;
 				} else {
-					partclass = classify(parts[p].textContent);
-					if (partclass === -1) p--;
+					postclass = classify(parts[p].textContent);
+					if (postclass === -1) p--; 
 				}
-				if (partclass === -1) partclass = readpost(parts[p]);
-				postclass = partclass || postclass;
+				// if the post is agreeing with someone, read the quote
+				if (postclass === -1 && p >= 0) postclass = readpost(parts[p]);
+				if (postclass < 0) postclass = 0;
 				p--;
 			}
 			return postclass;
