Added desktop art generator project

--- a/projects/index.html
+++ b/projects/index.html
@@ -48,6 +48,12 @@
               Crude topic crawler for Scratch that generates a list of supporters, non-supporters, and the undecided. Useful on Suggestions.
             </span>
           </li>
+          <li>
+            <a href="desktop-generator.html">Desktop Background Generator</a>
+            <span class="description">
+              An experimental abstract art generator for desktop backgrounds. (Must use a browser that supports ES6+ features)
+            </span>
+          </li>
         </ul>
         <p>In case you don't know, I'm also a <a href="//soundcloud.com/zro-from-scratch">self-taught musician</a>, I guess. Listen to these:
         <ul id="music">
