Fixed source link

--- a/projects/desktop-generator.html
+++ b/projects/desktop-generator.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<canvas id="output" style="margin:0;padding:0"></canvas>
-		<script src="src/js/color-gradient.js"></script>
+		<script src="//zro617.github.io/src/js/color-gradient.js"></script>
 		<script>
 const TAU = 2 * Math.PI;
 
