--- a/projects/index.html
+++ b/projects/index.html
@@ -51,7 +51,19 @@
           <li>
             <a href="desktop-generator.html">Desktop Background Generator</a>
             <span class="description">
-              An experimental abstract art generator for desktop backgrounds. (Must use a browser that supports ES6+ features)
+              An experimental abstract art generator for desktop backgrounds. (ES6+)
+            </span>
+          </li>
+          <li>
+            <a href="image-postprocessing.html">Image Post-Processing</a>
+            <span class="description">
+              Not-really-that-great image editor thing.
+            </span>
+          </li>
+          <li>
+            <a href="playlist-generator.html">Playlist Generator</a>
+            <span class="description">
+              Create, manage, and use anonymous playlists via YouTube. (ES6+)
             </span>
           </li>
         </ul>
